--- a/assets/templates/episode_config_tables.html
+++ b/assets/templates/episode_config_tables.html
@@ -1,37 +1,170 @@
 <div class="container-fluid full-height">
     <div id="tabs_container" class="col-xs-12">
+        <div class="col-md-12">
+            <div ng-app="seriesAnalyzer" ng-controller="configTableController">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Episode Selection</div>
+                    <div class="panel-body">
+                        <div class="col-md-3">
+                        <label>
+                            Episode:
+                            <select ng-options="episode as 'Season ' + episode.season_number + ' ' + 'Episode ' + episode.episode_number for episode in all_episodes | orderBy:['season_number','episode_number']"
+                                    ng-model="selectedEpisode">
+                                <option value="">Please select an episode...</option>
+                            </select>
+                        </label>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="well well-lg" ng-if="!selectedEpisode">Please select a Episode to see Statistics!</div>
 
-        <div ng-app="seriesAnalyzer" ng-controller="configTableController">
+                <div class="panel panel-primary" ng-if="selectedEpisode">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Episode Statistics</h3>
+                        <span class="pull-right clickable"><i
+                                class="glyphicon glyphicon-chevron-up"></i></span>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div id="speaker-info-box" class="row" ng-if="selectedEpisode">
+                                <!--<div class="col-md-3">
+                                    <img class=""
+                                         ng-src="assets/img/{{selectedSpeaker.name.toString().replace(' ', '_').toLowerCase()}}.jpg"
+                                         onError="this.src='assets/img/anonym.jpg';">
+                                </div>-->
 
+                                <div class="col-md-9">
+                                    <table st-table="rowCollection" class="table table-striped">
+                                        <td>
+                                            <table st-table="rowCollection"
+                                                   class="table table-striped speaker-info-table">
 
-            <div class="row">
-                <label>
-                    Episode:
-                    <select ng-options="episode as 'Season ' + episode.season_number + ' ' + 'Episode ' + episode.episode_number for episode in all_episodes | orderBy:['season_number','episode_number']"
-                            ng-model="selectedEpisode">
-                        <option value="">Please select an episode...</option>
-                    </select>
-                </label>
+                                                <tr>
+                                                    <td>Season:</td>
+                                                    <td>{{selectedEpisode.season_number}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Episode:</td>
+                                                    <td>{{selectedEpisode.episode_number}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Configuration Density:</td>
+                                                    <td>{{(selectedEpisode.configuration_density).toFixed(2)}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Number of Scenes:</td>
+                                                    <td>{{selectedEpisode.number_of_scenes}}</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table st-table="rowCollection"
+                                                   class="table table-striped speaker-info-table">
+                                                <tr>
+                                                    <td>Number Of Speaches:</td>
+                                                    <td>{{selectedEpisode.number_of_replicas}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Longest Speach:</td>
+                                                    <td>{{selectedEpisode.replicas_length_max}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Shortest Speach:</td>
+                                                    <td>{{selectedEpisode.replicas_length_min}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Speach Length Median:</td>
+                                                    <td>{{selectedEpisode.replicas_length_med}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Speach Length Total:</td>
+                                                    <td>{{selectedEpisode.replicas_length_total}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Average Speach Length:</td>
+                                                    <td>{{(selectedEpisode.replicas_length_avg).toFixed(2)}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Median Speach Length:</td>
+                                                    <td>{{selectedEpisode.replicas_length_med}}</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table st-table="rowCollection"
+                                                   class="table table-striped speaker-info-table">
+                                                <tr>
+                                                    <td>Number of Speakers:</td>
+                                                    <td>{{selectedEpisode.speakers.length}}</td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                <table st-table="rowCollection" class="table table-striped">
-                    <thead></thead>
-                    <tbody>
-                    <tr ng-repeat="scene in selectedEpisode.configuration_matrix">
-                        <td ng-repeat="values in scene track by $index" ng-style="set_color(values)">{{values}}</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+                <div class="panel panel-primary" ng-if="selectedEpisode">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Speach Length Distribution</h3>
+                        <span class="pull-right clickable"><i
+                                class="glyphicon glyphicon-chevron-up"></i></span>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row speaker-info-grafics">
+                            <div class="col-md-12 bar-chart">
+                                <nvd3 options="barOptions" data="replica_length_list"></nvd3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="row" id="force-directed-graph-speakers" ng-if="selectedEpisode">
-                <div class="col-md-6">
-                    <nvd3 options="options" data="selectedEpisode.force_directed_data"></nvd3>
+                <div class="panel panel-primary" ng-if="selectedEpisode">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Configuration Matrix</h3>
+                        <span class="pull-right clickable"><i
+                                class="glyphicon glyphicon-chevron-up"></i></span>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+
+                            <table st-table="rowCollection" class="table table-striped">
+                                <thead></thead>
+                                <tbody>
+                                <tr ng-repeat="scene in selectedEpisode.configuration_matrix">
+                                    <td ng-repeat="values in scene track by $index" ng-class="set_color(values)">
+                                        {{values}}
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-primary" ng-if="selectedEpisode">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Character Network</h3>
+                        <span class="pull-right clickable"><i
+                                class="glyphicon glyphicon-chevron-up"></i></span>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row" id="force-directed-graph-speakers" ng-if="selectedEpisode">
+                            <div class="col-md-6">
+                                <nvd3 options="options" data="selectedEpisode.force_directed_data"></nvd3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
-
-        <br>
     </div>
+</div>
+</div>
+
+<br>
+</div>
 </div>
