--- a/assets/templates/speaker-comparison.html
+++ b/assets/templates/speaker-comparison.html
@@ -364,10 +364,10 @@
 
                     <div class="row speaker-info-grafics">
                         <div class="col-md-6 bar-chart">
-                            <nvd3 options="options" data="selectedSpeaker[0].replicaLengths"></nvd3>
+                            <nvd3 options="discreteBarChartOptions" data="selectedSpeaker[0].replicaLengths"></nvd3>
                         </div>
                         <div class="col-md-6 bar-chart">
-                            <nvd3 options="options" data="selectedSpeaker[1].replicaLengths"></nvd3>
+                            <nvd3 options="discreteBarChartOptions" data="selectedSpeaker[1].replicaLengths"></nvd3>
                         </div>
                     </div>
                 </div>
